template for expressjs app added

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,15 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "lint": "eslint 'src/**/*.ts'"
+  },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^25.2.3",
     "dotenv": "^17.2.4",
     "eslint": "^10.0.0",
@@ -11,5 +20,13 @@
     "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "compression": "^1.8.1",
+    "cors": "^2.8.6",
+    "helmet": "^8.1.0",
+    "mongoose": "^9.2.0",
+    "morgan": "^1.10.1",
+    "rate-limiter-flexible": "^9.1.1"
   }
 }
